--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,6 @@ lib_deps =
   paulstoffregen/Time @ 1.6.1
   jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
   ricmoo/QRCode @ 0.0.1 ; for QR code
-  marvinroger/AsyncMqttClient @ 0.9.0 ; FOR MQTT
   bblanchon/ArduinoJson @ 6.19.4 ; for JSON
 
 ; set the default target to compile, upload, and monitor
@@ -78,6 +77,7 @@ targets = upload
 ; host machine much be reachable from ESP
 ; might need to set partitions sometime
 upload_port = homeplate.local ; change this to your device's name/IP
+; upload_port = /dev/ttyUSB*
 upload_protocol = espota
 upload_flags =
   --host_port=8266 ; this port must be allowed through the firewall from the ESP to this computer
