load data to file and load data from file

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,12 @@ monitor_speed = 115200
 board = esp32dev
 ; CPU Frequency. Max for ESP32: 240000000L
 board_build.f_cpu = 240000000L
-board_build.partitions = min_spiffs.csv ; use SD card for storage and use the rest of flash for larger apps
+;board_build.partitions = min_spiffs.csv ; use SD card for storage and use the rest of flash for larger apps
+board_build.partitions = partitions_custom.csv
+board_build.filesystem = littlefs
+
+board_build.f_flash = 80000000L
+
 
 ; Until there is a specific Inkplate10 board definition we need to ensure
 ; ARDUINO_ESP32_DEV is not set, as it will be always prioritized by the library
