--- a/platformio.ini
+++ b/platformio.ini
@@ -40,8 +40,9 @@ lib_deps =
 
 ; set the default target to compile, upload, and monitor
 targets = upload, monitor
-monitor_filters = time, esp32_exception_decoder, default
+monitor_filters = esp32_exception_decoder
 
+build_type = debug
 
 build_flags =
   -DBOARD_HAS_PSRAM
