--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,7 @@ lib_deps =
 targets = upload, monitor
 monitor_filters = esp32_exception_decoder
 
-build_type = debug
+; build_type = debug
 
 build_flags =
   -DBOARD_HAS_PSRAM
