improved readout of battery and fixed monthly switch

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ board_build.filesystem = littlefs
 ; thinking it is an Inkplate 6 (which still has this board name for BC reasons).
 build_unflags =
   -DARDUINO_ESP32_DEV
+  -std=gnu++11
 
 lib_deps =
   ; LIB @ [^]VERSION ('^' means latest version with same major version number)
@@ -42,11 +43,11 @@ targets = upload, monitor
 monitor_filters = esp32_exception_decoder
 
 ; build_type = debug
-
 build_flags =
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
   -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL
+  -std=gnu++2a
     ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
 
 
